--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,7 @@ Source: python-afs
 Section: python
 Priority: extra
 Maintainer: Evan Broder <broder@mit.edu>
-Build-Depends: cdbs, debhelper, python-all-dev, python-support, python-pyrex, python-setuptools, libopenafs-dev
+Build-Depends: cdbs, debhelper, python-all-dev, python-support, cython, python-setuptools, libopenafs-dev, libkrb5-dev
 Standards-Version: 3.8.3
 
 Package: python-afs
